test/classes/vass/ref-like-intents/inout-subclass.good
inout-subclass.chpl:14: error: Cannot assign to borrowed D? from borrowed C?
